<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_background"
        android:layout_gravity="top|center"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/lblArtistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblArtistStature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stature_label"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblArtistNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nationality_label"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblArtistBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate_label"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"/>

        <GridView
            android:id="@+id/gvAlbums"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:gravity="center"
            android:verticalSpacing="16dp"/>

    </LinearLayout>



</FrameLayout>