<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_background"
        android:layout_gravity="top|center"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/baseline_image"
                android:layout_gravity="top|center"
                android:scaleType="centerCrop"
                />

            <TextView android:id="@+id/lblSongTitle"
                android:text="@string/song_title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView android:id="@+id/lblSongReleaseDate"
                android:text="@string/song_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <TextView android:id="@+id/lblSongDuration"
                android:text="@string/song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>

            <TextView android:id="@+id/lblSongGenre"
                android:text="@string/song_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
